fix nav z-index

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ h2#header-name.header-text-content {
 }
 
 .work-exp-wrap {
-  padding: 4rem 0;
+  padding: 2rem 0;
 }
 
 h1,
@@ -107,6 +107,7 @@ hr {
   width: 100%;
   margin: auto 0;
   padding-top: 140px;
+  z-index: 1;
 }
 
 section {
@@ -264,6 +265,7 @@ ul.footer-links.contact-info {
   width: 100vw;
   background: white;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  z-index: 10;
 }
 
 #nav {
